package com.pharmacy.pattern.decorator;

import java.math.BigDecimal;

public interface BillAmountComponent {

    BigDecimal calculateTotal();
}
